--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-    "setup": "node setup.js"
+		"setup": "node setup.js"
 	},
 	"dependencies": {
+		"bluebird": "^3.5.1",
+		"body-parser": "^1.15.2",
+		"cors": "^2.8.1",
 		"express": "^5.0.0-alpha.2",
 		"mongodb": "^2.2.5",
-		"mongoose": "^4.5.7",
-		"cors": "^2.8.1",
-		"body-parser": "^1.15.2"
+		"mongoose": "^4.5.7"
 	},
 	"engines": {
 		"node": "8.9.4"
